# Liorhybrid

./: .gitignore  =5.0.0  ADVANCED_OPTIMIZATION_TECHNIQUES.md  ARCHITECTURE_COMPARISON.md  AUDIT_REPORT_TRAINER2_INFERENCE.md  AUDIT_SUMMARY.md  AUDIT_TEAM_REPORT.md  BEFORE_AFTER_COMPARISON.md  CAUSAL_FIELD_HAMILTONIAN_REVIEW.md  CONTEXT_MANAGER_REFACTORING.md  CONTRIBUTING.md  EXECUTIVE_SUMMARY.md  EXECUTIVE_SUMMARY_REVIEWS.md  FIXES_COMPLETE.md  GEOMETRIC_MAMBA_GUIDE.md  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  Liorhybrid.pyproj  Liorhybrid.sln  MEASUREMENT_ARCHITECTURE.md  METRIC_SCALING_DOCUMENTATION.md  MIGRATION.md  MOE_FRAMEWORK_IMPLEMENTATION.md  MOE_IMPLEMENTATION_SUMMARY.md  MOE_OPTIMIZATION_GUIDE.md  MOE_PHYSICS_REPLACEMENT.md  OPTION6_IMPLEMENTATION.md  PERFORMANCE_IMPROVEMENTS.md  PHYSICS_AUDIT.md  PHYSICS_AUDIT_ADDENDUM.md  PHYSICS_AUDIT_CHANGES.md  PHYSICS_AUDIT_END_TO_END.md  PHYSICS_AUDIT_FINAL.md  PHYSICS_AUDIT_METAREVIEW.md  PHYSICS_AUDIT_README.md  PHYSICS_CODE_PURPOSE_REPORT.md  PHYSICS_FIXES_SUMMARY.md  PLAN_REMOVE_ADAM.md  QUICK_START.md  QUICK_START_MOE.md  (+41 more)
.claude/: settings.local.json
configs/: train_full.yaml  train_geometric.yaml
core/: __init__.py  config.py  tensor_field.py
deprecated_modules/: octonionic_causal_field.py
docs/: AGENT_FOLDER_REPORT.md  CAUSAL_FIELD_REVIEW_SUMMARY.md  CLIFFORD_GEOMETRY_CONNECTION.md  OPTION6_ADDRESS_PROBING.md  PIPELINE_SUMMARY_REPORT.md  QUICK_REFERENCE_CAUSAL_FIELD.md  SPECTRAL_PRIME_QUICK_REFERENCE.md  TOKEN_TELEMETRY_AUDIT.md  The Anti-Golem Dependency updated - Leizerman (1).pdfZone.Identifier  (+1 more)
(+137 files in other folders)
